@@ -15,6 +15,7 @@
     - Fix diaglogs
     - Line breaks in dialog message  (with Miriam Ruiz)
     - Enhance dialog strings
+    - Fix calendar string format
 
 #====================================================
 #	Cycle - calendar for women
